tests/resource/valid/definition/collection_in_f_strings.mamba
print("set {{2, 3, 4}}")
print("list {[2, 3, 4]}")
