tests/resource/invalid/type/collection/list_builder_illegal_op_cond.mamba
[ x | print("asdf") + 2 ]
